@@ -38,6 +38,10 @@ Revision 4.2.3
   moved to module scope to become accessible by wrapper routines
   (v1.py/v2c.py). This is used for setting strictly typed default values
   to corresponding SNMP data structures.
+- LCD configuration caching is implemented at pysnmp.entity.rfc3413.config
+  that improves performance of repetitive calls by 10% and might hugely
+  improve NotificationOriginator's performance when working on a large
+  number of targets.
 - A caching maps implemented at rfc2576 subsystem to speed-up communityName
   to/from securityName resolution. The also makes transport tags processing
   better compliant to the standard.
